split endpoints for filter and search (it was so obviosly!!!)
